--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="iconefavicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Portifólio</title>
 
 </head>
 <body>
-    <h1>Meu portifólio</h1>
+    <main>
+        <section class="tela_iphone">
+            <iframe src="home.html" class="home_iphone" frameborder="0"></iframe>
+        </section>
+       <section class="icones_sociais">
+
+       </section>
+    
+    
+    </main>
 </body>
 </html>
