--- a/git.html
+++ b/git.html
@@ -21,6 +21,7 @@
             display: block;
             background-color: green;
             width: 100vw;
+            height: 100vh;
             font-size: bolder;
             color: white;
             text-decoration: none;
@@ -33,6 +34,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="git">
-    <a href="#">CLICK AQUI</a>
+
 </body>
 </html>
