--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <a class="github" href="git.html" target="tela_iphone"></a>
 
-            <a class="whatsapp" href="#" target="tela_iphone"></a>
+            <a class="whatsapp" href="whats.html" target="tela_iphone"></a>
            
        </section>
        
