--- a/instagram.html
+++ b/instagram.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="instagram">
-    <a href="#">CLICK AQUI</a>
+    <img src="imagens/tela-insta.jpg" alt="instagram">
+    
 </body>
 </html>
